Added backend API project and dockerfile with basic build setup and ConversionController logic.

--- a/gMat/gMat.csproj
+++ b/gMat/gMat.csproj
@@ -75,4 +75,16 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
+	  <PackageReference Include="Xamarin.FFmpegKit.FullGpl.Android">
+	    <Version>4.5.1</Version>
+	  </PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0-maccatalyst'">
+	  <PackageReference Include="Xamarin.FFmpegKit.FullGpl.iOS">
+	    <Version>4.5.1</Version>
+	  </PackageReference>
+	</ItemGroup>
+
 </Project>
